# fast-api-template

./: README.md  pyproject.toml  setup.py
app/: app.py  db.py  schemas.py  users.py
app/config/: db.py  users.py
app/routers/: posts.py
