[project]
name = "fast-api-template"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "custom-python-logger>=2.0.6",
    "fastapi>=0.118.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "imagekitio>=4.2.0",
    "pre-commit>=4.3.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "uvicorn[standard]>=0.37.0",
]
